<resources>
    <string name="app_name" translatable="false">One Message Chat</string>

    <!-- Activity Main strings -->
    <string name="main_activity_fab_description">Add new message</string>
    <string name="main_activity_menu_item_add_message">Add new message</string>
    <string name="main_activity_toolbar_title" translatable="false">One Message Chat</string>
    <string name="menu_item_create_message">Create a new message</string>
    <string name="menu_item_subscribe_message">Subscribe to a message</string>
    <string name="menu_item_edit_message">Edit this message</string>
    <string name="menu_item_unsubscribe_message">Unsubscribe from this message</string>
    <string name="main_activity_toast_unsubscribe">Unsubscribed from message!</string>
    <string name="main_activity_toast_delete">Message deleted!</string>
    <string name="main_activity_alert_title">Subscribe to a new message!</string>
    <string name="main_activity_alert_message">Type the message identifier below:</string>
    <string name="main_activity_alert_negative">Cancel</string>
    <string name="main_activity_alert_positive">Subscribe!</string>
    <string name="main_activity_alert_negative_toast">Nevermind!</string>

    <!-- Tile Message strings -->
    <string name="tile_message_message_content_placeholder" translatable="false">Placeholder message content</string>
    <string name="tile_message_message_identifier_lead" translatable="false">"ID: "</string>
    <string name="tile_message_message_identifier_placeholder" translatable="false">Placeholder message identifier</string>

    <!-- Activity Message strings -->
    <string name="message_activity_toolbar_title_edit">Edit this message</string>
    <string name="message_activity_toolbar_subtitle">Message details</string>
    <string name="message_activity_toolbar_title_create">Create a new message!</string>
    <string name="message_activity_message_identifier_hint">Message identifier</string>
    <string name="message_activity_message_content_hint">Message content</string>
    <string name="message_activity_save_button">Save!</string>
    <string name="message_activity_cancel_button">Cancel</string>
    <string name="menu_item_delete_message">Delete this message</string>
</resources>