<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <TextView
        android:id="@+id/messageContentTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tile_message_message_content_placeholder"
        android:textSize="25sp"
        android:lines="1"
        android:ellipsize="end"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/messageIdentifierLeadTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tile_message_message_identifier_lead"
        app:layout_constraintTop_toBottomOf="@id/messageContentTv"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/messageIdentifierTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tile_message_message_identifier_placeholder"
        app:layout_constraintTop_toBottomOf="@id/messageContentTv"
        app:layout_constraintStart_toEndOf="@id/messageIdentifierLeadTv"
        />

</androidx.constraintlayout.widget.ConstraintLayout>